--- a/onprem-prometheus-deployment.yaml
+++ b/onprem-prometheus-deployment.yaml
@@ -27,12 +27,12 @@ spec:
           image: gcr.io/stackdriver-prometheus/stackdriver-prometheus-sidecar:${SIDECAR_IMAGE_TAG}
           imagePullPolicy: Always
           args:
-            - \"--stackdriver.project-id=${GCP_PROJECT}\"
-            - \"--prometheus.wal-directory=${DATA_DIR}/wal\"
-            - \"--stackdriver.kubernetes.location=${GCP_REGION}\"
-            - \"--stackdriver.kubernetes.cluster-name=${KUBE_CLUSTER}\"
-            #- \"--stackdriver.generic.location=${GCP_REGION}\"
-            #- \"--stackdriver.generic.namespace=${KUBE_CLUSTER}\"
+            - \--stackdriver.project-id=${GCP_PROJECT}\
+            - \--prometheus.wal-directory=${DATA_DIR}/wal\
+            - \--stackdriver.kubernetes.location=${GCP_REGION}\
+            - \--stackdriver.kubernetes.cluster-name=${KUBE_CLUSTER}\
+            #- \--stackdriver.generic.location=${GCP_REGION}\
+            #- \--stackdriver.generic.namespace=${KUBE_CLUSTER}\
           ports:
             - name: sidecar
               containerPort: 9091
